# ax_utils

./: .gitignore  GITHUB_ACTIONS_SETUP.md  LICENSE  MAIN_BRANCH_SETUP.md  MANIFEST.in  README.md  SETUP_CHECKLIST.md  bandit-report.json  justfile  pyproject.toml  safety-report.json  setup.py  uv.toml
.github/: dependabot.yml
.github/workflows/: quality.yml  release.yml  test.yml
ax_utils/: __init__.py
ax_utils/ax_queue/: README  __init__.py  _ax_queue.cpp  concurrent_queue.hpp  gevent_patch.py
ax_utils/ax_queue/tests/: perf_test.py  test_queue.py  test_std_queue.py
ax_utils/ax_tree/: ax_tree.py
ax_utils/ax_tree/tests/: test_ax_tree.py
ax_utils/props_to_tree/: __init__.py  fallback.py
ax_utils/props_to_tree/tests/: test_props_to_tree.py
ax_utils/simple_deepcopy/tests/: test_simple_deepcopy.py
ax_utils/unicode_utils/: __init__.py  monkey_patches.py
ax_utils/unicode_utils/tests/: sample_objects.py  test__convert_nested.py  test_is_utf8.py
docs/: MIGRATION_DETAILS.md  MIGRATION_SUMMARY.md  SETUP_CHECKLIST.md  UV_MIGRATION_SUMMARY.md  github_actions.md  github_actions_v4_upgrade.md  license_compatibility.md  security_scan_artifacts_fix.md  uv_cache_fix.md  windows_compatibility.md
scripts/: check_ci_env.py  quick_test.py
tests/: __init__.py  test_benchmarks.py  test_functionality.py  test_integration.py
